
   Changelog

   __.__.2022, v2.16:

   Bugfixes:
   -  format mz: in the binary map of listings, the RVA of segments belonging
      to a group may have been incorrect, since the group's align adjustment 
      was ignored; see grpalign.asm;

   09.04.2022, v2.15:

   Bugfixes:
   -  format bin, mz, omf, pe: fixup created by direct addressing without
      symbol ( _DATA:1234h ) was still not always correct if segment was in a
      group; see lea2.asm.
   -  invoke directive: a missing left square bracket for indirect addressing
      may have been accepted if the size of the register matched the expected
      size; see invoke4.asm.
   -  using long instead of intptr_t to hold result of _findfirst() caused a
      GPF in Win64 version; see main.c.
   -  erroneously emitted error 'Magnitude of offset exceeds 16-bit' in direct
      addressing mode without symbol if segment register had no assume, segment
      was 32-bit and default word size was 16-bit only; see offset14.asm.
   -  <loadds> prologue argument was ignored if procedure had no parameters and
      locals; see loadds.asm.
   -  text macro and macro function expansion might have caused a buffer
      overflow if expanded line got too long; see expans42.asm & expans44.asm.
   -  macro function expansion inside text macros had swallowed trailing white
      spaces behind the macro invokation, sometimes resulting in errors; see 
      expans43.asm.
   -  a constant defined via EQU could have been changed to an assembly-time
      variable if the value didn't change; see equate30.asm.
   -  if two relocatable items belonging to different segments were 
      subtracted in an expression on the right side of EQU, strange error 
      "symbol redefinition" was emitted when that symbol was used later; see
      equate31.asm.
   -  assembly-time variables: if the expression on the right side of the
      equal sign contained an undefined symbol, it might have been ignored;
      see expr7.asm.