@@ -6,7 +6,10 @@
    Bugfixes:
    -  format mz: in the binary map of listings, the RVA of segments belonging
       to a group may have been incorrect, since the group's align adjustment 
-      was ignored; see grpalign.asm;
+      was ignored; see grpalign.asm.
+
+   Other changes:
+   -  format pe: allow imports by number; see pe10.asm.
 
    09.04.2022, v2.15:
 
